cake and smaller signs